{
    "name": "AgencyAndThresholdPerceptionV4Control",
    "maps": [
        {
            "name": "Subject",
            "id": "6334327a-5b4e-4b72-a21e-f0554bfbef70",
            "actions": [
                {
                    "name": "ResponseTriggered",
                    "type": "Button",
                    "id": "71bbb672-1a27-4d2e-be57-6a030828ad61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JoystickHorizontalValueChanged",
                    "type": "Value",
                    "id": "7ad4825e-a37d-4499-ba1a-112a1d9c3910",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "JoystickVerticalValueChanged",
                    "type": "Value",
                    "id": "3431a684-2b30-482f-8001-d7181b3e8d18",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrottleNegativeCommandTriggered",
                    "type": "Value",
                    "id": "e122d5be-2f8a-4629-8acc-fd21cf6b7c1e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrottlePositiveCommandTriggered",
                    "type": "Value",
                    "id": "ae426898-6b2d-46f0-af9b-098b73c0060e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrottleNeutralCommandTriggered",
                    "type": "Value",
                    "id": "9cd51745-4218-46d1-a4b7-6c69bf963d01",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ThrottleValueChanged",
                    "type": "Value",
                    "id": "77ae40d5-7353-4d47-a42c-b8dc31173671",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70dd0ac3-dcb4-4cab-859a-f1e38f05e7c4",
                    "path": "<HID::Thrustmaster Throttle - HOTAS Warthog>/z",
                    "interactions": "",
                    "processors": "Invert",
                    "groups": "Cockpit",
                    "action": "ThrottleValueChanged",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06ec3d60-c0b6-4972-a72f-e3229bde2e4d",
                    "path": "<HID::Thrustmaster Throttle - HOTAS Warthog>/z",
                    "interactions": "ApollonHoldInRangeWithThreshold(m_duration_ms=250,m_threshold_ratio_percentage=15,m_lower_bound=-0.05,m_upper_bound=0.23)",
                    "processors": "AxisDeadzone,Invert",
                    "groups": "Cockpit",
                    "action": "ThrottleNeutralCommandTriggered",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "778fe3c4-4535-4e80-81a4-0b7f1d4065f7",
                    "path": "<HID::Thrustmaster Throttle - HOTAS Warthog>/z",
                    "interactions": "ApollonHoldInRangeWithThreshold(m_duration_ms=50,m_lower_bound=0.75)",
                    "processors": "AxisDeadzone,Invert",
                    "groups": "Cockpit",
                    "action": "ThrottlePositiveCommandTriggered",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da5f7779-ff3d-4dee-a3ed-5f2b11f67d36",
                    "path": "<HID::Thrustmaster Throttle - HOTAS Warthog>/z",
                    "interactions": "ApollonHoldInRangeWithThreshold(m_duration_ms=50,m_upper_bound=-0.75)",
                    "processors": "AxisDeadzone,Invert",
                    "groups": "Cockpit",
                    "action": "ThrottleNegativeCommandTriggered",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "85bad851-7d35-4cd4-928d-7f280ab82be1",
                    "path": "<HID::Thustmaster Joystick - HOTAS Warthog>/stick/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Cockpit",
                    "action": "JoystickHorizontalValueChanged",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45e7f6fa-1ce6-414f-b4c6-c2520b2ff583",
                    "path": "<HID::Thustmaster Joystick - HOTAS Warthog>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Cockpit",
                    "action": "ResponseTriggered",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48bfead5-fdca-47a1-b699-642daab2a86f",
                    "path": "<HID::Thrustmaster Throttle - HOTAS Warthog>/button15",
                    "interactions": "",
                    "processors": "",
                    "groups": "Cockpit",
                    "action": "ResponseTriggered",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fab2bcd-cb5b-42c3-aaa9-f9e4a3ec4da6",
                    "path": "<HID::Thrustmaster Throttle - HOTAS Warthog>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Cockpit",
                    "action": "ResponseTriggered",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83e427f0-8e0d-438c-8cd8-921f6db33800",
                    "path": "<HID::Thustmaster Joystick - HOTAS Warthog>/stick/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Cockpit",
                    "action": "JoystickVerticalValueChanged",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Supervisor",
            "id": "c9cce379-5859-4d74-9448-1ab5cfea88fd",
            "actions": [
                {
                    "name": "TrackedDeviceOrientation",
                    "type": "PassThrough",
                    "id": "411417b4-4900-400e-8a9d-1f2cf3250706",
                    "expectedControlType": "Quaternion",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TrackedDevicePosition",
                    "type": "PassThrough",
                    "id": "edddf6ee-8b7e-4a2c-a14a-f48331ed5588",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "RightClick",
                    "type": "PassThrough",
                    "id": "0ef87dea-b033-4788-bf74-b00e38868c4f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MiddleClick",
                    "type": "PassThrough",
                    "id": "eca785d4-5c27-4b08-a0da-f3b22385675b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ScrollWheel",
                    "type": "PassThrough",
                    "id": "cf37f3f6-c88f-410f-af0e-951c02920350",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "f676fb9d-76fd-4236-90b9-68b3870ae6b1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "f75efe04-a2dc-4b76-a606-47b528dbe8f4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Cancel",
                    "type": "Button",
                    "id": "15cfe298-5e66-4718-a0a6-3d00cea363ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Submit",
                    "type": "Button",
                    "id": "b90f307d-26fb-41fb-89cd-cd9333e499fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Navigate",
                    "type": "Value",
                    "id": "f186fb28-89af-4138-a721-e1cc5fd1e52b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Gamepad",
                    "id": "942b236e-11f2-4ea8-bedc-bbb1d835b9ee",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "fbd6d254-e016-401c-9656-3dd5bd449ce5",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "f8e134e3-0c99-4e76-983f-fabbd27b5e75",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "733b6d0a-7a43-419f-b965-337c304fb0d3",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "683f7df8-efe0-4fc2-9305-ba304e8b3daf",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3690d6f2-2f2a-4eaf-90e1-c09123379dc8",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "1733d0c2-68ad-4b03-a8f0-e6d2eb4d0316",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "7ed5f975-1f7f-403f-ac85-c93eb12666c7",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "07a55a26-d891-4294-9e98-59aaa10b3fd7",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "36e12857-231c-4801-b6fb-5cbe51e587cf",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Joystick",
                    "id": "82f3534a-a2d6-4f8d-99e6-57b2b6b90d3e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "47563e56-dd82-4cbd-b508-2cfc62e668a4",
                    "path": "<Joystick>/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8299d98f-f2fb-4ee1-9ea2-18e7b53ead57",
                    "path": "<Joystick>/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d2b52850-7fc5-4c17-b23c-cfbef1e69711",
                    "path": "<Joystick>/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "30421503-dc20-4fd8-901c-15549c03d57e",
                    "path": "<Joystick>/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Keyboard",
                    "id": "853608e4-9227-4c13-a7d5-8204a668847a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "e39e17c3-2502-4c0b-8748-deaeb2943d02",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "up",
                    "id": "5174ee4e-0a47-486d-8a04-fa6ae87e599b",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "3787479f-7c9c-4f83-ab79-666e325d9556",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b8128252-c432-43ca-94c3-5fa303d9116a",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f35f04aa-5982-489c-87cc-e561b94168e6",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "be52da01-7b07-4258-a35a-daf81d6a05db",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8b256e39-c5e1-47e7-8ea9-c94b1f1493ca",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4ee57d88-7bde-45b3-8a4d-42aadeff9359",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Navigate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "92b9558b-5520-4a4b-976d-71b7d91c960a",
                    "path": "*/{Submit}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Submit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "efe3e85e-4a50-44d1-96bb-0016c0708604",
                    "path": "*/{Cancel}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Cancel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "875e52b6-91b5-4a20-8c57-3d7845bff4e8",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "91a7ff48-385d-4f32-afee-45e6099b6397",
                    "path": "<Pen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d629ad4-f694-4342-92a2-4ad9110e1b84",
                    "path": "<Touchscreen>/touch*/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ff6d4a3-ce51-4f46-83cc-858d41d7a1fa",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e74a3c84-de55-4abf-b784-bb3ee0ec4692",
                    "path": "<Pen>/tip",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "acdc3cc9-77b3-4c8d-a15c-ca4d31093cb3",
                    "path": "<Touchscreen>/touch*/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0122f08a-d619-4d6a-ab57-29a3d8ed8d6c",
                    "path": "<XRController>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "893e7aaa-4d17-49cb-a3de-3058f6531276",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "ScrollWheel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4251f48b-8186-4c23-a74a-ed3e177d68ee",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "MiddleClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f68af31-04fd-495a-b988-0c369011c358",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53cae0e9-a9c0-4e77-926f-6a3361c0c9a8",
                    "path": "<XRController>/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "TrackedDevicePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0961fdc8-b40b-43e0-831d-3c5ecd70748a",
                    "path": "<XRController>/deviceRotation",
                    "interactions": "",
                    "processors": "",
                    "groups": "Control",
                    "action": "TrackedDeviceOrientation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}